Build system work

--- a/src/stage1/Makefile
+++ b/src/stage1/Makefile
@@ -6,11 +6,15 @@ default: echo assemble
 
 
 echo:
-	@echo "\n --- Stage 1 Bootloader --- \n"
+	@echo "\n--- Stage 1 Bootloader --- \n"
 
 
 assemble:
 	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) stage1.S -o $(BIN_DIR)/stage1_$(FS).bin
 
+
+debug:
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) stage1.S -E > $(DEBUG_DIR)/stage1_$(FS)_$(BITS).i
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) stage1.S -l $(DEBUG_DIR)/stage1_$(FS)_$(BITS).lst
 
 .PHONY: default
