Further work on project split

--- a/src/stage2/Makefile
+++ b/src/stage2/Makefile
@@ -11,7 +11,7 @@ echo:
 
 
 $(OBJ_DIR)/%.o: %.S
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) $< -o $@
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME="$(KERNEL_NAME)" $< -o $@
 
 
 link: $(OBJS)
