--- a/src/stage1/Makefile
+++ b/src/stage1/Makefile
@@ -14,8 +14,8 @@ assemble:
 
 
 debug:
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) stage1.S -E > $(DEBUG_DIR)/stage1_$(FS)_$(BITS).i
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) stage1.S -l $(DEBUG_DIR)/stage1_$(FS)_$(BITS).lst
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME="$(KERNEL_NAME)" stage1.S -E > $(DEBUG_DIR)/stage1_$(FS)_$(BITS).i
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME="$(KERNEL_NAME)" stage1.S -l $(DEBUG_DIR)/stage1_$(FS)_$(BITS).lst
 
 
 .PHONY: default
