Added the disgusting %ifndef STAGE_1's so that I could add extern failure to all BIOS files

--- a/src/stage1/Makefile
+++ b/src/stage1/Makefile
@@ -10,20 +10,13 @@ echo:
 
 
 assemble:
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) \
-	-D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' \
-	stage1.S -o $(BIN_DIR)/stage1_$(FS).bin
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' stage1.S -o $(BIN_DIR)/stage1_$(FS).bin
 
 
 debug:
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) \
-	-D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' \
-	stage1.S -E > $(DEBUG_DIR)/stage1_$(FS)_$(BITS).i
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' stage1.S -E > $(DEBUG_DIR)/stage1_$(FS)_$(BITS).i
 
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) \
-	-D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' \
-	stage1.S -l $(DEBUG_DIR)/stage1_$(FS)_$(BITS).lst \
-	-o $(BIN_DIR)/stage1_$(FS).bin
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' stage1.S -l $(DEBUG_DIR)/stage1_$(FS)_$(BITS).lst -o $(BIN_DIR)/stage1_$(FS).bin
 
 
 # ndisasm is better than objdump for binaries imo
