--- a/misc/docker/Dockerfile.x11
+++ b/misc/docker/Dockerfile.x11
@@ -1,4 +1,4 @@
-FROM ubuntu:22.04
+FROM debian:bookworm-slim
 
 # Set environment variables
 ENV PREFIX="/usr/local/i386elfgcc"
@@ -9,7 +9,7 @@ ENV PATH="${PREFIX}/bin:${PATH}"
 RUN apt-get update && \
     apt-get install -y \
     # Emulator
-    qemu qemu-system-x86 qemu-kvm \
+    qemu-system-x86 qemu-kvm \
     # Build tools
     build-essential nasm dosfstools mtools \
     # UI/X11 libs
