Lots of refactor work

--- a/src/stage1/Makefile
+++ b/src/stage1/Makefile
@@ -10,17 +10,17 @@ echo:
 
 
 assemble:
-	$(ASM) stage1.S -o $(BIN_DIR)/stage1_$(FS).bin $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"'
+	$(ASM) stage1.S -o $(BIN_DIR)/stage1_$(FILE_SYSTEM).bin $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FILE_SYSTEM) -D$(ARCH_BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"'
 
 
 debug:
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' stage1.S -E > $(DEBUG_DIR)/stage1_$(FS)_$(BITS).i
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FILE_SYSTEM) -D$(ARCH_BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' stage1.S -E > $(DEBUG_DIR)/stage1_$(FILE_SYSTEM)_$(ARCH_BITS).i
 
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FS) -D$(BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' stage1.S -l $(DEBUG_DIR)/stage1_$(FS)_$(BITS).lst -o $(BIN_DIR)/stage1_$(FS).bin
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) $(BOOT_INCLUDES) -D$(FILE_SYSTEM) -D$(ARCH_BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' stage1.S -l $(DEBUG_DIR)/stage1_$(FILE_SYSTEM)_$(ARCH_BITS).lst -o $(BIN_DIR)/stage1_$(FILE_SYSTEM).bin
 
 
 # ndisasm is better than objdump for binaries imo
 	ndisasm -b 16 -o 0x7C00 \
-	$(BIN_DIR)/stage1_$(FS).bin > $(DEBUG_DIR)/stage1.dump
+	$(BIN_DIR)/stage1_$(FILE_SYSTEM).bin > $(DEBUG_DIR)/stage1.dump
 
 .PHONY: default
