--- a/src/stage2/Makefile
+++ b/src/stage2/Makefile
@@ -4,31 +4,32 @@ LINKER_SCRIPT := $(STAGE2_DIR)/stage2.ld
 MAIN_ASM_SRC  := $(STAGE2_DIR)/load_kernel.S
 MAIN_ASM_OBJ  := $(OBJ_DIR)/load_kernel_$(ARCH_BITS).o
 # TODO update this so that it automatically decides which dirs to include
-ARCH_DIR      := $(STAGE2_DIR)/32bit
+ARCH_DIRS      := $(STAGE2_DIR)/16bit $(STAGE2_DIR)/32bit
 
-SUBDIR_C_SRCS   := $(wildcard $(ARCH_DIR)/*.c)
-SUBDIR_ASM_SRCS := $(wildcard $(ARCH_DIR)/*.S)
+SUBDIR_ASM_SRCS := $(foreach dir,$(ARCH_DIRS),$(wildcard $(dir)/*.S))
+SUBDIR_C_SRCS   := $(foreach dir,$(ARCH_DIRS),$(wildcard $(dir)/*.c))
 
-SUBDIR_C_OBJS   := $(patsubst $(ARCH_DIR)/%.c,$(OBJ_DIR)/$(ARCH_BITS)_%.o,$(SUBDIR_C_SRCS))
-SUBDIR_ASM_OBJS := $(patsubst $(ARCH_DIR)/%.S,$(OBJ_DIR)/$(ARCH_BITS)_%.o,$(SUBDIR_ASM_SRCS))
+SUBDIR_ASM_OBJS := $(foreach dir,$(ARCH_DIRS),\
+                   $(patsubst $(dir)/%.S,$(OBJ_DIR)/%.o,$(wildcard $(dir)/*.S)))
+SUBDIR_C_OBJS   := $(foreach dir,$(ARCH_DIRS),\
+                   $(patsubst $(dir)/%.c,$(OBJ_DIR)/%.o,$(wildcard $(dir)/*.c)))
 
-ALL_OBJS   := $(SUBDIR_C_OBJS) $(SUBDIR_ASM_OBJS) $(MAIN_ASM_OBJ)
+ALL_OBJS   := $(SUBDIR_ASM_OBJS) $(SUBDIR_C_OBJS) $(MAIN_ASM_OBJ)
 
 STAGE2_ELF := $(OBJ_DIR)/stage2_$(ARCH_BITS).elf
 STAGE2_BIN := $(BIN_DIR)/stage2_$(ARCH_BITS).bin
 
-.PHONY: all build debug clean stats
+.PHONY: build debug stats
 
 build: $(STAGE2_BIN)
 
 
-debug: $(STAGE2_BIN) | $(DEBUG_DIR)
-	$(MAKE) -C $(ARCH_DIR) debug \
-	FILE_SYSTEM=$(FILE_SYSTEM) ARCH_BITS=$(ARCH_BITS) KERNEL_NAME='"$(KERNEL_NAME)"' \
-	PROJECT=$(PROJECT)
+debug: $(STAGE2_BIN)
+	$(foreach dir,$(ARCH_DIRS),$(MAKE) -C $(dir) debug FILE_SYSTEM=$(FILE_SYSTEM) ARCH_BITS=$(ARCH_BITS) KERNEL_NAME='"$(KERNEL_NAME)"' PROJECT=$(PROJECT))
 
-	objdump -D --visualize-jumps --start-address=0x7E00 $(STAGE2_ELF) > $(DEBUG_DIR)/stage2_$(ARCH_BITS)_elf.dump
-	ndisasm -b 32 -o 0x0 $(STAGE2_BIN) > $(DEBUG_DIR)/stage2_$(ARCH_BITS)_bin.dump # Note: Adjusted offset and bitness for 32-bit binary
+	$(OBJ_DMP) $(OBJ_DMP__FLAGS) $(STAGE2_ELF) > $(DEBUG_DIR)/stage2_$(ARCH_BITS)_elf.dump
+	$(DISASM) -b 32 -o 0x0 $(STAGE2_BIN) > $(DEBUG_DIR)/stage2_$(ARCH_BITS)_bin.dump
+
 
 stats: $(STAGE2_BIN)
 	$(call bin_size_stat, $(STAGE2_BIN))
@@ -37,26 +38,23 @@ stats: $(STAGE2_BIN)
 # Build Rules
 
 # Build all object files from the subdirectories
-$(SUBDIR_C_OBJS) $(SUBDIR_ASM_OBJS): | $(OBJ_DIR)
-	$(MAKE) -C $(ARCH_DIR) build \
-	FILE_SYSTEM=$(FILE_SYSTEM) ARCH_BITS=$(ARCH_BITS) KERNEL_NAME='"$(KERNEL_NAME)"' \
-	PROJECT=$(PROJECT)
+subdirs:
+	$(foreach dir,$(ARCH_DIRS),$(MAKE) -C $(dir) build FILE_SYSTEM=$(FILE_SYSTEM) ARCH_BITS=$(ARCH_BITS) KERNEL_NAME='"$(KERNEL_NAME)"' PROJECT=$(PROJECT);)
+# 	@echo "\n\nALL_OBJS        : $(ALL_OBJS)"
+# 	@echo "\nSUBDIR_ASM_SRCS : $(SUBDIR_ASM_SRCS)"
+# 	@echo "\nSUBDIR_C_SRCS   : $(SUBDIR_C_SRCS)"
+# 	@echo "\nSUBDIR_ASM_OBJS : $(SUBDIR_ASM_OBJS)"
+# 	@echo "\nSUBDIR_C_OBJS   : $(SUBDIR_C_OBJS)\n\n"
 
 
 # Build the object file(s) from the current directory
-$(MAIN_ASM_OBJ): $(MAIN_ASM_SRC) | $(OBJ_DIR)
-	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) \
-	-D$(FILE_SYSTEM) -D$(ARCH_BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' \
-	$(GBL_INCLUDES) \
-	$< -o $@
+$(MAIN_ASM_OBJ): $(MAIN_ASM_SRC)
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) -D$(FILE_SYSTEM) -D$(ARCH_BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' $(GBL_INCLUDES) $< -o $@
 
 # Link all object files into the final ELF executable
-$(STAGE2_ELF): $(ALL_OBJS) $(LINKER_SCRIPT) | $(OBJ_DIR)
-	$(LD) $(LD_FLAGS) -T $(LINKER_SCRIPT) -o $@ $(ALL_OBJS)
+$(STAGE2_ELF): subdirs $(ALL_OBJS) $(LINKER_SCRIPT)
+	$(LD) $(LD_FLAGS) $(ALL_OBJS) -T $(LINKER_SCRIPT) -o $@
 
 # Convert the ELF executable to a raw binary
-$(STAGE2_BIN): $(STAGE2_ELF) | $(BIN_DIR)
+$(STAGE2_BIN): $(STAGE2_ELF)
 	$(OBJ_CPY) $(OBJ_CPY_FLAGS) $< $@
-
-$(BIN_DIR) $(OBJ_DIR) $(DEBUG_DIR):
-	mkdir -p $@
