--- a/.dockerignore
+++ b/.dockerignore
@@ -1,26 +1,26 @@
 # Ignore version control
-**/.git
-**/.gitignore
+.git
+.gitignore
 
 # Ignore build artifacts
-**/*.o
-**/*.elf
-**/*.bin
-**/*.img
-**/*.a
-**/*.so
+*.o
+*.elf
+*.bin
+*.img
+*.a
+*.so
 
 # Ignore local config
-**/.vscode/
+.vscode/
 
 # Ignore the following directories
-**/docs/
-**/build/
+docs/
+build/
 
 # Ignore documentation and media files
-**/*.log
-**/*.md
-**/*.png
+*.log
+*.md
+*.png
 
 # Additional files to be ignored
-**/LICENSE
+LICENSE
