Update to some docs and update to scripts. Added gdb to the docker file

--- a/misc/docker/Dockerfile
+++ b/misc/docker/Dockerfile
@@ -27,6 +27,7 @@ RUN echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> /etc/profil
 
 # Install i386-elf-gcc
 RUN brew install x86_64-elf-gcc
+RUN brew install i386-elf-gdb
 
 WORKDIR /GBL
 COPY . .
