--- a/src/stage2/Makefile
+++ b/src/stage2/Makefile
@@ -1,10 +1,13 @@
 LINKER_SCRIPT := $(STAGE2_DIR)/stage2.ld
 
+# Use foreach loops to find source files in the specified ARCH_DIRS.
 SUBDIR_ASM_SRCS := $(foreach dir,$(ARCH_DIRS),$(wildcard $(dir)/*.S))
-SUBDIR_C_SRCS   := $(foreach dir,$(ARCH_DIRS),$(wildcard $(dir)/*.c))
+SUBDIR_C_SRCS   := $(foreach dir,$(ARCH_DIRS),$(wildcard $(dir)/*/*.c))
 
-SUBDIR_ASM_OBJS := $(foreach dir,$(ARCH_DIRS),$(patsubst $(dir)/%.S,$(OBJ_DIR)/%.o,$(wildcard $(dir)/*.S)))
-SUBDIR_C_OBJS   := $(foreach dir,$(ARCH_DIRS),$(patsubst $(dir)/%.c,$(OBJ_DIR)/%.o,$(wildcard $(dir)/*.c)))
+# Correctly define the object file lists with a flattened structure.
+# We use 'notdir' to get only the filenames, then prepend the object directory.
+SUBDIR_C_OBJS := $(patsubst %.c,$(OBJ_DIR)/%.o,$(notdir $(SUBDIR_C_SRCS)))
+SUBDIR_ASM_OBJS := $(patsubst %.S,$(OBJ_DIR)/%.o,$(notdir $(SUBDIR_ASM_SRCS)))
 
 ALL_OBJS   := $(SUBDIR_ASM_OBJS) $(SUBDIR_C_OBJS)
 
@@ -21,11 +24,32 @@ debug: $(STAGE2_BIN)
 
 
 stats: $(STAGE2_BIN)
-	$(call bin_size_stat, $(STAGE2_BIN))
+    $(call bin_size_stat, $(STAGE2_BIN))
 
 subdirs:
+	@echo ""
+	@echo ""
+	@echo ""
+	@echo ""
+	@echo ""
+	@echo ""
+	@echo "$(SUBDIR_ASM_SRCS)"
+	@echo ""
+	@echo "$(SUBDIR_C_SRCS)"
+	@echo ""
+	@echo "$(SUBDIR_C_OBJS)"
+	@echo ""
+	@echo "$(SUBDIR_ASM_OBJS)"
+	@echo ""
+	@echo "$(ALL_OBJS)"
+	@echo ""
+	@echo ""
+	@echo ""
+	@echo ""
+	@echo ""
+	@echo ""
 # Build all object files from the subdirectories
-	$(foreach dir,$(ARCH_DIRS),$(MAKE) -C $(dir) build FILE_SYSTEM=$(FILE_SYSTEM) ARCH_BITS=$(ARCH_BITS) KERNEL_NAME="$(KERNEL_NAME)" PROJECT=$(PROJECT);)
+	$(foreach dir,$(ARCH_DIRS),$(MAKE) -C $(dir) build FILE_SYSTEM=$(FILE_SYSTEM) ARCH_BITS=$(ARCH_BITS) KERNEL_NAME="$(KERNEL_NAME)" PROJECT=$(PROJECT) && echo "";)
 
 # Build Rules
 
